# internal/api/impl.go
@@ -4,17 +4,21 @@ package api
 
 import (
 	"encoding/json"
+	"fmt"
+	"io"
 	"net/http"
+	"os"
 
 	"codeberg.org/filipmnowak/audio_player_rest_api/internal/db/sqlite"
-	"github.com/google/uuid"
+	"codeberg.org/filipmnowak/audio_player_rest_api/internal/scan"
+	google_uuid "github.com/google/uuid"
 	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
 // ensure that we've conformed to the `ServerInterface` with a compile-time check
 var _ ServerInterface = (*Server)(nil)
 
-type Server struct{
+type Server struct {
 	DB sqlite.DB
 }
 
@@ -23,10 +27,24 @@ func NewServer(db sqlite.DB) Server {
 }
 
 func (s Server) AlbumGetbyID(w http.ResponseWriter, r *http.Request, uuid openapi_types.UUID) {
-	resp := Object{}
+	album := Album
+	var artURL string
+	_uuid := uuid.String()
+	result, _ := GetAlbumByID(_uuid, s.DB)
+	if result.SameAs(scan.Album{}) {
+		w.WriteHeader(http.StatusNotFound)
+		_ = json.NewEncoder(w).Encode(Error{})
+	}
+
+	_coverPath, _ := GetAlbumCoverPath(_uuid, s.DB)
+	if _coverPath != "" {
+		// TODO: auto-generate URL dynamically.
+		// related: https://github.com/oapi-codegen/oapi-codegen/issues/163
+		artURL = fmt.Sprintf("http://io:8080/api/album/%s/cover", result.Id)
+	}
 
 	w.WriteHeader(http.StatusOK)
-	_ = json.NewEncoder(w).Encode(resp)
+	_ = json.NewEncoder(w).Encode(Object{Id: &uuid, NameOrTitle: &result.Title, Type: &album, ArtURL: &artURL})
 }
 
 func (s Server) AlbumGetbyArtistID(w http.ResponseWriter, r *http.Request, uuid openapi_types.UUID, _ AlbumGetbyArtistIDParams) {
@@ -55,6 +73,16 @@ func (s Server) SongsGetbyAlbumID(w http.ResponseWriter, r *http.Request, uuid o
 
 	w.WriteHeader(http.StatusOK)
 	_ = json.NewEncoder(w).Encode(resp)
+}
+
+func (s Server) CoverGetbyAlbumID(w http.ResponseWriter, r *http.Request, uuid openapi_types.UUID) {
+	_uuid := uuid.String()
+
+	coverPath, _ := GetAlbumCoverPath(_uuid, s.DB)
+	f, _ := os.Open(coverPath)
+	cover, _ := io.ReadAll(f)
+	w.WriteHeader(http.StatusOK)
+	w.Write(cover)
 }
 
 func (s Server) SongsGetbyArtistID(w http.ResponseWriter, r *http.Request, uuid openapi_types.UUID, _ SongsGetbyArtistIDParams) {
@@ -105,8 +133,8 @@ func (s Server) SearchForArtists(w http.ResponseWriter, r *http.Request, search 
 	results, _ := SearchForArtists(search, s.DB)
 	resp := []Object{}
 	for _, r := range results {
-		_uuid, _ := uuid.Parse(r.Id)
-		resp = append(resp, Object{Id: &_uuid, NameOrTitle: &r.Name, Type: &artist}) 
+		_uuid, _ := google_uuid.Parse(r.Id)
+		resp = append(resp, Object{Id: &_uuid, NameOrTitle: &r.Name, Type: &artist})
 	}
 	w.WriteHeader(http.StatusOK)
 	_ = json.NewEncoder(w).Encode(resp)
@@ -117,8 +145,8 @@ func (s Server) SearchForAlbums(w http.ResponseWriter, r *http.Request, search s
 	results, _ := SearchForAlbums(search, s.DB)
 	resp := []Object{}
 	for _, r := range results {
-		_uuid, _ := uuid.Parse(r.Id)
-		resp = append(resp, Object{Id: &_uuid, NameOrTitle: &r.Title, Type: &album}) 
+		_uuid, _ := google_uuid.Parse(r.Id)
+		resp = append(resp, Object{Id: &_uuid, NameOrTitle: &r.Title, Type: &album})
 	}
 	w.WriteHeader(http.StatusOK)
 	_ = json.NewEncoder(w).Encode(resp)
@@ -129,8 +157,8 @@ func (s Server) SearchForSongs(w http.ResponseWriter, r *http.Request, search st
 	results, _ := SearchForSongs(search, s.DB)
 	resp := []Object{}
 	for _, r := range results {
-		_uuid, _ := uuid.Parse(r.Id)
-		resp = append(resp, Object{Id: &_uuid, NameOrTitle: &r.Title, Type: &song}) 
+		_uuid, _ := google_uuid.Parse(r.Id)
+		resp = append(resp, Object{Id: &_uuid, NameOrTitle: &r.Title, Type: &song})
 	}
 	w.WriteHeader(http.StatusOK)
 	_ = json.NewEncoder(w).Encode(resp)
